feat(video-api): add local identity authentication
